lab1/Test/L1-A-12-24.output
Error Type B at Line 8
Error Type A at Line 13
Error Type A at Line 26
Error Type A at Line 35
Error Type B at Line 44
Error Type A at Line 48
Error Type A at Line 48
